LIFT/code/BoogieAST/BoogieParser.py
# Generated from Boogie.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BoogieParser ( Parser ):

    grammarFileName = "Boogie.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'axiom'", "';'", "'const'", "'unique'", 
                     "'function'", "'('", "','", "')'", "'returns'", "':'", 
                     "'{'", "'}'", "'implementation'", "'procedure'", "'type'", 
                     "'='", "'var'", "'extends'", "'complete'", "'modifies'", 
                     "'free'", "'requires'", "'ensures'", "'assert'", "':='", 
                     "'['", "']'", "'assume'", "'break'", "'async'", "'call'", 
                     "'goto'", "'havoc'", "'if'", "'else'", "'par'", "'|'", 
                     "'return'", "'while'", "'invariant'", "'yield'", "'*'", 
                     "'int'", "'real'", "'bool'", "'<==>'", "'\u21D4'", 
                     "'==>'", "'\u21D2'", "'<=='", "'\u21D0'", "'&&'", "'\u2227'", 
                     "'||'", "'\u2228'", "'=='", "'<'", "'>'", "'<='", "'>='", 
                     "'!='", "'<:'", "'\u2260'", "'\u2264'", "'\u2265'", 
                     "'++'", "'+'", "'-'", "'div'", "'mod'", "'/'", "'**'", 
                     "'!'", "'\u00AC'", "'false'", "'true'", "'e'", "'.'", 
                     "'bv'", "'old'", "'forall'", "'\u2200'", "'exists'", 
                     "'\u2203'", "'lambda'", "'\u03BB'", "'::'", "'\u2022'", 
                     "'then'", "'|{'", "'}|'", "'where'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "String", "Digits", "Ident", "WS", "BlockComment", 
                      "LineComment" ]

    RULE_boogie_program = 0
    RULE_axiom_decl = 1
    RULE_const_decl = 2
    RULE_func_decl = 3
    RULE_impl_decl = 4
    RULE_proc_decl = 5
    RULE_type_decl = 6
    RULE_var_decl = 7
    RULE_order_spec = 8
    RULE_var_or_type = 9
    RULE_proc_sign = 10
    RULE_impl_body = 11
    RULE_stmt_list = 12
    RULE_local_vars = 13
    RULE_spec = 14
    RULE_modifies_spec = 15
    RULE_requires_spec = 16
    RULE_ensures_spec = 17
    RULE_label_or_cmd = 18
    RULE_transfer_cmd = 19
    RULE_structured_cmd = 20
    RULE_assert_cmd = 21
    RULE_assign_cmd = 22
    RULE_assignment_lhs = 23
    RULE_assignment_lhs_indexed = 24
    RULE_assume_cmd = 25
    RULE_break_cmd = 26
    RULE_call_cmd = 27
    RULE_goto_cmd = 28
    RULE_havoc_cmd = 29
    RULE_if_cmd = 30
    RULE_label = 31
    RULE_par_call_cmd = 32
    RULE_return_cmd = 33
    RULE_while_cmd = 34
    RULE_yield_cmd = 35
    RULE_call_params = 36
    RULE_void_call_params_remain = 37
    RULE_ret_call_params_remain = 38
    RULE_guard = 39
    RULE_r_type = 40
    RULE_type_args = 41
    RULE_type_atom = 42
    RULE_map_type = 43
    RULE_exprs = 44
    RULE_proposition = 45
    RULE_expr = 46
    RULE_equiv_op = 47
    RULE_implies_expr = 48
    RULE_implies_op = 49
    RULE_explies_op = 50
    RULE_logical_expr = 51
    RULE_and_op = 52
    RULE_or_op = 53
    RULE_rel_expr = 54
    RULE_rel_op = 55
    RULE_bv_term = 56
    RULE_term = 57
    RULE_add_op = 58
    RULE_factor = 59
    RULE_mul_op = 60
    RULE_power = 61
    RULE_unary_expr = 62
    RULE_neg_op = 63
    RULE_coercion_expr = 64
    RULE_array_expr = 65
    RULE_indexed = 66
    RULE_atom_expr = 67
    RULE_bool_lit = 68
    RULE_nat = 69
    RULE_dec = 70
    RULE_decimal = 71
    RULE_dec_float = 72
    RULE_bv_lit = 73
    RULE_old_expr = 74
    RULE_arith_coercion_expr = 75
    RULE_paren_expr = 76
    RULE_forall_expr = 77
    RULE_exists_expr = 78
    RULE_lambda_expr = 79
    RULE_forall = 80
    RULE_exists = 81
    RULE_r_lambda = 82
    RULE_quant_body = 83
    RULE_bound_vars = 84
    RULE_qsep = 85
    RULE_if_then_else_expr = 86
    RULE_code_expr = 87
    RULE_spec_block = 88
    RULE_attr_typed_idents_wheres = 89
    RULE_attr_typed_idents_where = 90
    RULE_typed_idents_wheres = 91
    RULE_typed_idents_where = 92
    RULE_typed_idents = 93
    RULE_idents = 94
    RULE_type_params = 95
    RULE_attr = 96
    RULE_attr_or_trigger = 97
    RULE_attr_param = 98

    ruleNames =  [ "boogie_program", "axiom_decl", "const_decl", "func_decl", 
                   "impl_decl", "proc_decl", "type_decl", "var_decl", "order_spec", 
                   "var_or_type", "proc_sign", "impl_body", "stmt_list", 
                   "local_vars", "spec", "modifies_spec", "requires_spec", 
                   "ensures_spec", "label_or_cmd", "transfer_cmd", "structured_cmd", 
                   "assert_cmd", "assign_cmd", "assignment_lhs", "assignment_lhs_indexed", 
                   "assume_cmd", "break_cmd", "call_cmd", "goto_cmd", "havoc_cmd", 
                   "if_cmd", "label", "par_call_cmd", "return_cmd", "while_cmd", 
                   "yield_cmd", "call_params", "void_call_params_remain", 
                   "ret_call_params_remain", "guard", "r_type", "type_args", 
                   "type_atom", "map_type", "exprs", "proposition", "expr", 
                   "equiv_op", "implies_expr", "implies_op", "explies_op", 
                   "logical_expr", "and_op", "or_op", "rel_expr", "rel_op", 
                   "bv_term", "term", "add_op", "factor", "mul_op", "power", 
                   "unary_expr", "neg_op", "coercion_expr", "array_expr", 
                   "indexed", "atom_expr", "bool_lit", "nat", "dec", "decimal", 
                   "dec_float", "bv_lit", "old_expr", "arith_coercion_expr", 
                   "paren_expr", "forall_expr", "exists_expr", "lambda_expr", 
                   "forall", "exists", "r_lambda", "quant_body", "bound_vars", 
                   "qsep", "if_then_else_expr", "code_expr", "spec_block", 
                   "attr_typed_idents_wheres", "attr_typed_idents_where", 
                   "typed_idents_wheres", "typed_idents_where", "typed_idents", 
                   "idents", "type_params", "attr", "attr_or_trigger", "attr_param" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    String=93
    Digits=94
    Ident=95
    WS=96
    BlockComment=97
    LineComment=98

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Boogie_programContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def axiom_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Axiom_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Axiom_declContext,i)


        def const_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Const_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Const_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Func_declContext,i)


        def impl_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Impl_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Impl_declContext,i)


        def proc_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Proc_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Proc_declContext,i)


        def type_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Type_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Type_declContext,i)


        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Var_declContext,i)


        def getRuleIndex(self):
            return BoogieParser.RULE_boogie_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoogie_program" ):
                listener.enterBoogie_program(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoogie_program" ):
                listener.exitBoogie_program(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoogie_program" ):
                return visitor.visitBoogie_program(self)
            else:
                return visitor.visitChildren(self)




    def boogie_program(self):

        localctx = BoogieParser.Boogie_programContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_boogie_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BoogieParser.T__0) | (1 << BoogieParser.T__2) | (1 << BoogieParser.T__4) | (1 << BoogieParser.T__12) | (1 << BoogieParser.T__13) | (1 << BoogieParser.T__14) | (1 << BoogieParser.T__16))) != 0):
                self.state = 205
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BoogieParser.T__0]:
                    self.state = 198
                    self.axiom_decl()
                    pass
                elif token in [BoogieParser.T__2]:
                    self.state = 199
                    self.const_decl()
                    pass
                elif token in [BoogieParser.T__4]:
                    self.state = 200
                    self.func_decl()
                    pass
                elif token in [BoogieParser.T__12]:
                    self.state = 201
                    self.impl_decl()
                    pass
                elif token in [BoogieParser.T__13]:
                    self.state = 202
                    self.proc_decl()
                    pass
                elif token in [BoogieParser.T__14]:
                    self.state = 203
                    self.type_decl()
                    pass
                elif token in [BoogieParser.T__16]:
                    self.state = 204
                    self.var_decl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 209
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Axiom_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proposition(self):
            return self.getTypedRuleContext(BoogieParser.PropositionContext,0)


        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.AttrContext)
            else:
                return self.getTypedRuleContext(BoogieParser.AttrContext,i)


        def getRuleIndex(self):
            return BoogieParser.RULE_axiom_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAxiom_decl" ):
                listener.enterAxiom_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAxiom_decl" ):
                listener.exitAxiom_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAxiom_decl" ):
                return visitor.visitAxiom_decl(self)
            else:
                return visitor.visitChildren(self)




    def axiom_decl(self):

        localctx = BoogieParser.Axiom_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_axiom_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 210
            self.match(BoogieParser.T__0)
            self.state = 214
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BoogieParser.T__10:
                self.state = 211
                self.attr()
                self.state = 216
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 217
            self.proposition()
            self.state = 218
            self.match(BoogieParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typed_idents(self):
            return self.getTypedRuleContext(BoogieParser.Typed_identsContext,0)


        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.AttrContext)
            else:
                return self.getTypedRuleContext(BoogieParser.AttrContext,i)


        def order_spec(self):
            return self.getTypedRuleContext(BoogieParser.Order_specContext,0)


        def getRuleIndex(self):
            return BoogieParser.RULE_const_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_decl" ):
                listener.enterConst_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_decl" ):
                listener.exitConst_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = BoogieParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_const_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self.match(BoogieParser.T__2)
            self.state = 224
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BoogieParser.T__10:
                self.state = 221
                self.attr()
                self.state = 226
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 228
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BoogieParser.T__3:
                self.state = 227
                self.match(BoogieParser.T__3)


            self.state = 230
            self.typed_idents()
            self.state = 232
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BoogieParser.T__17:
                self.state = 231
                self.order_spec()


            self.state = 234
            self.match(BoogieParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Ident(self):
            return self.getToken(BoogieParser.Ident, 0)

        def var_or_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.Var_or_typeContext)
            else:
                return self.getTypedRuleContext(BoogieParser.Var_or_typeContext,i)


        def r_type(self):
            return self.getTypedRuleContext(BoogieParser.R_typeContext,0)


        def expr(self):
            return self.getTypedRuleContext(BoogieParser.ExprContext,0)


        def attr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.AttrContext)
            else:
                return self.getTypedRuleContext(BoogieParser.AttrContext,i)


        def type_params(self):
            return self.getTypedRuleContext(BoogieParser.Type_paramsContext,0)


        def getRuleIndex(self):
            return BoogieParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = BoogieParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 236
            self.match(BoogieParser.T__4)
            self.state = 240
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BoogieParser.T__10:
                self.state = 237
                self.attr()
                self.state = 242
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 243
            self.match(BoogieParser.Ident)
            self.state = 245
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BoogieParser.T__56:
                self.state = 244
                self.type_params()


            self.state = 247
            self.match(BoogieParser.T__5)
            self.state = 256
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BoogieParser.T__5) | (1 << BoogieParser.T__10) | (1 << BoogieParser.T__25) | (1 << BoogieParser.T__42) | (1 << BoogieParser.T__43) | (1 << BoogieParser.T__44) | (1 << BoogieParser.T__56))) != 0) or _la==BoogieParser.Ident:
                self.state = 248
                self.var_or_type()
                self.state = 253
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BoogieParser.T__6:
                    self.state = 249
                    self.match(BoogieParser.T__6)
                    self.state = 250
                    self.var_or_type()
                    self.state = 255
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 258
            self.match(BoogieParser.T__7)
            self.state = 266
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BoogieParser.T__8]:
                self.state = 259
                self.match(BoogieParser.T__8)
                self.state = 260
                self.match(BoogieParser.T__5)
                self.state = 261
                self.var_or_type()
                self.state = 262
                self.match(BoogieParser.T__7)
                pass
            elif token in [BoogieParser.T__9]:
                self.state = 264
                self.match(BoogieParser.T__9)
                self.state = 265
                self.r_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 273
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BoogieParser.T__10]:
                self.state = 268
                self.match(BoogieParser.T__10)
                self.state = 269
                self.expr()
                self.state = 270
                self.match(BoogieParser.T__11)
                pass
            elif token in [BoogieParser.T__1]:
                self.state = 272
                self.match(BoogieParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Impl_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proc_sign(self):
            return self.getTypedRuleContext(BoogieParser.Proc_signContext,0)


        def impl_body(self):
            return self.getTypedRuleContext(BoogieParser.Impl_bodyContext,0)


        def getRuleIndex(self):
            return BoogieParser.RULE_impl_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImpl_decl" ):
                listener.enterImpl_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImpl_decl" ):
                listener.exitImpl_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImpl_decl" ):
                return visitor.visitImpl_decl(self)
            else:
                return visitor.visitChildren(self)




    def impl_decl(self):

        localctx = BoogieParser.Impl_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_impl_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 275
            self.match(BoogieParser.T__12)
            self.state = 276
            self.proc_sign()
            self.state = 277
            self.impl_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proc_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proc_sign(self):
            return self.getTypedRuleContext(BoogieParser.Proc_signContext,0)


        def impl_body(self):
            return self.getTypedRuleContext(BoogieParser.Impl_bodyContext,0)


        def spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BoogieParser.SpecContext)
            else:
                return self.getTypedRuleContext(BoogieParser.SpecContext,i)


        def getRuleIndex(self):
            return BoogieParser.RULE_proc_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProc_decl" ):
                listener.enterProc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProc_decl" ):
                listener.exitProc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProc_decl" ):
                return visitor.visitProc_decl(self)
            else:
                return visitor.visitChildren(self)




    def proc_decl(self):

        localctx = BoogieParser.Proc_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_proc_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 279
            self.match(BoogieParser.T__13)
            self.state = 280
            self.proc_sign()
            self.state = 295
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BoogieParser.T__1]:
                self.state = 281
                self.match(BoogieParser.T__1)
                self.state = 285
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BoogieParser.T__19) | (1 << BoogieParser.T__20) | (1 << BoogieParser.T__21) | (1 << BoogieParser.T__22))) != 0):
                    self.state = 282
                    self.spec()
                    self.state = 287
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
